# bevy_axis_input_ext

./: Cargo.toml  README.md
config/: default.input_conf  user.input_conf
examples/: test.rs
src/: lib.rs  plugin.rs  resources.rs  systems.rs  utils.rs  values.rs
